src/tests/snapshots/cendol__tests__lexer__tests__char_and_string_literals.snap
---
source: src/tests/lexer.rs
expression: tokens
---
- CharacterConstant: 97
- CharacterConstant: 10
- StringLiteral: "helloworld\n"
