src/tests/snapshots/cendol__tests__lexer__tests__char_literals.snap
---
source: src/tests/lexer.rs
expression: token_kinds
---
- CharacterConstant: 97
- CharacterConstant: 10
