src/tests/snapshots/cendol__tests__lexer__tests__comments.snap
---
source: src/tests/lexer.rs
expression: tokens
---
- Int
- Identifier: x
- Assign
- IntegerConstant: 1
- Semicolon
- Int
- Identifier: y
- Assign
- IntegerConstant: 2
- Semicolon
