src/tests/snapshots/cendol__tests__lexer__tests__complex_float_literals.snap
---
source: src/tests/lexer.rs
expression: tokens
---
- Unknown
- Plus
- IntegerConstant: 1
- FloatConstant: 0.5
- Unknown
- Minus
- IntegerConstant: 1
- FloatConstant: 1
- Dot
- IntegerConstant: 5
- FloatConstant: 10000000000
- FloatConstant: 179767941955214400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
- Unknown
- Minus
- IntegerConstant: 1022
