src/tests/snapshots/cendol__tests__lexer__tests__complex_integer_suffixes.snap
---
source: src/tests/lexer.rs
expression: token_kinds
---
- IntegerConstant:
    - 1
    - U
- IntegerConstant:
    - 1
    - U
- IntegerConstant:
    - 1
    - L
- IntegerConstant:
    - 1
    - L
- IntegerConstant:
    - 1
    - LL
- IntegerConstant:
    - 1
    - LL
- IntegerConstant:
    - 1
    - UL
- IntegerConstant:
    - 1
    - UL
- IntegerConstant:
    - 1
    - UL
- IntegerConstant:
    - 1
    - UL
- IntegerConstant:
    - 1
    - UL
- IntegerConstant:
    - 1
    - UL
- IntegerConstant:
    - 1
    - UL
- IntegerConstant:
    - 1
    - UL
- IntegerConstant:
    - 1
    - ULL
- IntegerConstant:
    - 1
    - ULL
- IntegerConstant:
    - 1
    - ULL
- IntegerConstant:
    - 1
    - ULL
- IntegerConstant:
    - 1
    - ULL
- IntegerConstant:
    - 1
    - ULL
- IntegerConstant:
    - 1
    - ULL
- IntegerConstant:
    - 1
    - ULL
- IntegerConstant:
    - 1
    - U
- IntegerConstant:
    - 1
    - L
- IntegerConstant:
    - 1
    - ULL
- IntegerConstant:
    - 1
    - U
- IntegerConstant:
    - 1
    - L
- IntegerConstant:
    - 1
    - ULL
