src/tests/snapshots/cendol__tests__lexer__tests__float_literals.snap
---
source: src/tests/lexer.rs
expression: tokens
---
- FloatConstant: 1.5
- FloatConstant: 0.000123
- FloatConstant: 9
- FloatConstant: 1
- Dot
- IntegerConstant: 5
- FloatConstant: 10000000000
- Unknown
- Plus
- IntegerConstant: 1
