src/tests/snapshots/cendol__tests__lexer__tests__identifiers.snap
---
source: src/tests/lexer.rs
expression: ident_tokens
---
- - Identifier: variable
- - Identifier: my_var
- - Identifier: _private
- - Identifier: var123
- - Identifier: a
- - Identifier: _
