src/tests/snapshots/cendol__tests__lexer__tests__integer_literals.snap
---
source: src/tests/lexer.rs
assertion_line: 120
expression: results
---
0123l:
  - IntegerConstant:
      - 83
      - L
0123llu:
  - IntegerConstant:
      - 83
      - ULL
0123lu:
  - IntegerConstant:
      - 83
      - UL
"077":
  - IntegerConstant:
      - 63
      - ~
0777ul:
  - IntegerConstant:
      - 511
      - UL
0777ull:
  - IntegerConstant:
      - 511
      - ULL
077u:
  - IntegerConstant:
      - 63
      - U
"0x10UL":
  - IntegerConstant:
      - 16
      - UL
"0x1A":
  - IntegerConstant:
      - 26
      - ~
"0x1Au":
  - IntegerConstant:
      - 26
      - U
"0x20LU":
  - IntegerConstant:
      - 32
      - UL
"0x40ULL":
  - IntegerConstant:
      - 64
      - ULL
"0x80LLU":
  - IntegerConstant:
      - 128
      - ULL
"0xFFll":
  - IntegerConstant:
      - 255
      - LL
1000ULL:
  - IntegerConstant:
      - 1000
      - ULL
1000ull:
  - IntegerConstant:
      - 1000
      - ULL
123L:
  - IntegerConstant:
      - 123
      - L
123l:
  - IntegerConstant:
      - 123
      - L
1LL:
  - IntegerConstant:
      - 1
      - LL
1ll:
  - IntegerConstant:
      - 1
      - LL
2000LLU:
  - IntegerConstant:
      - 2000
      - ULL
2000llu:
  - IntegerConstant:
      - 2000
      - ULL
"42":
  - IntegerConstant:
      - 42
      - ~
42U:
  - IntegerConstant:
      - 42
      - U
42u:
  - IntegerConstant:
      - 42
      - U
456UL:
  - IntegerConstant:
      - 456
      - UL
456ul:
  - IntegerConstant:
      - 456
      - UL
789LU:
  - IntegerConstant:
      - 789
      - UL
789lu:
  - IntegerConstant:
      - 789
      - UL
