src/tests/snapshots/cendol__tests__lexer__tests__non_adjacent.snap
---
source: src/tests/lexer.rs
expression: token_kinds
---
- StringLiteral: hello
- Semicolon
- StringLiteral: world
