src/tests/snapshots/cendol__tests__lexer__tests__non_adjacent_string_literals.snap
---
source: src/tests/lexer.rs
assertion_line: 203
expression: tokens
---
- StringLiteral: hello
- Semicolon
- StringLiteral: world
